Added background, additional classes and two different bonus tables

--- a/src/lib/ve-pc/data/ve.jdr/locales/en/canvas_sheet.yml
+++ b/src/lib/ve-pc/data/ve.jdr/locales/en/canvas_sheet.yml
@@ -20,6 +20,11 @@
   lineHeight: 80
   lense:
     - talents
+- size: 40px
+  posx: 1150
+  posy: 400
+  lense:
+    - background
 - size: 60px
   posx: 440
   posy: 840
