--- a/src/lib/ve-pc/data/ve.jdr/locales/en/talents.yml
+++ b/src/lib/ve-pc/data/ve.jdr/locales/en/talents.yml
@@ -37,3 +37,21 @@ stone_kinship:
 transfer_essence:
   title: Transfer Essence
   description: You can turn 3 Hit Points (HP) into 1 Magic Point (MP).
+channel_miracles:
+  title: Channel Miracles
+  description: Each level (starting with the first) you must agree with the DJ two new "miracles" to add to your list, in the same way that a sorcerer shapes his spells. You can add the same miracle more than once, since you can only invoke each miracle once a day. The power of miracles must be in line with the level at which they are earned, and must be accepted by the DJ. You can use the list in Appendix 2 as a guide to design your miracles.
+read_runes:
+  title: Read Runes
+  description: You can invoke miracles inscribed on scrolls as long as you have the level required by the scroll.
+hand_imposition:
+  title: Hand Imposition
+  description: You can heal up to 3D6 Life points per day through your hands. You can distribute these dice as you wish (1D6 three times, 3D6 only once or 2D6 and 1D6).
+evil_detection:
+  title: Evil Detection
+  description: The DJ sets the exact definition of "evil", which can range from just detecting demonic or chaotic creatures, to identifying any individual who wants to harm you.
+enemy_knowledge:
+  title: Enemy Knowledge
+  description: Choose a type of enemy against which you have specialized (orcs, goblins, kobolds, giants, etc.). When you attack one of those creatures you gain an advantage.
+expert_guide:
+  title: Expert Guide
+  description: You get advantage in Survival rolls related to tracking, orienting or getting outdoor supplies.
